--- a/microservice/environment.yml
+++ b/microservice/environment.yml
@@ -19,7 +19,6 @@ dependencies:
   - pydantic
   - anyio
   - starlette
-  - paho-mqtt
   - requests
 
   # # Paket pip dari PyPI
@@ -27,3 +26,4 @@ dependencies:
   #     - face-recognition==1.3.0 --no-deps
   #     - face_recognition_models==0.3.0
   #     - mediapipe==0.10.21
+  #     - gmqtt
