--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "react": "^19.1.1",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "react-webcam": "^7.2.0"
