--- a/microservice/environment.yml
+++ b/microservice/environment.yml
@@ -1,28 +1,27 @@
-name: faceenv
+name: condaenv
 channels:
   - conda-forge
 
 dependencies:
-  # Python 3.10 untuk cocok dengan dlib .whl
   - python=3.10
 
   # Paket ML / CV via conda
   - numpy
   - opencv
+  - face-recognition
 
   # Paket Web & Lainnya
   - fastapi
   - uvicorn
-  - pydantic
-  - anyio
-  - starlette
   - requests
 
-  # # Paket pip dari PyPI
-  # - pip:
-  #     - face-recognition==1.3.0 --no-deps
-  #     - face_recognition_models==0.3.0
-  #     - mediapipe==0.10.21
-  #     - gmqtt
-  #     - supabase-py
-  #     - python-dotenv
+  # Paket pip dari PyPI
+  - pip:
+      # - face-recognition==1.3.0 --no-deps
+      # - face_recognition_models==0.3.0
+      - mediapipe==0.10.21
+      - gmqtt
+      - supabase
+      - python-dotenv
+      - paddlepaddle
+      - paddleocr
